--- a/index.html
+++ b/index.html
@@ -6,7 +6,30 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>มันจัด</h1>
-    <h1>สวัสดี</h1>
+    <center>เว็ปคณะวิทยาศาสตร์มหาลัยนเรศวร</center>
+    <div>
+        <h1>สาขา comsci</h1>
+        <img src="" alt="">
+    </div>
+    <div>
+        <h1>สาขา it</h1>
+        <img src="" alt="">
+    </div>
+    <div>
+        <h1>สาขา เคมี</h1>
+        <img src="" alt="">
+    </div>
+    <div>
+        <h1>สาขา ชีววิทยา</h1>
+        <img src="" alt="">
+    </div>
+    <div>
+        <h1>สาขา ฟิสิกส์</h1>
+        <img src="" alt="">
+    </div>
+    <div>
+        <h1>สาขา คณิต</h1>
+        <img src="" alt="">
+    </div>
 </body>
 </html>
